--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "1.0.0",
   "description": "Boilerplate for ReactJS project with hot code reloading",
   "scripts": {
-    "start": "node server.js",
-    "lint": "eslint src"
+    "start": "webpack | node server"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/jjtfsalgado/react_redux_boilerplate"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-0",
+      "react"
+    ]
   },
   "devDependencies": {
     "axios": "^0.16.2",
@@ -19,9 +25,9 @@
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
-    "eslint": "^1.10.3",
-    "eslint-plugin-react": "^3.6.2",
+    "css-loader": "^0.23.1",
     "express": "^4.13.4",
+    "node-sass": "^4.3.0",
     "react-dom": "^0.14.9",
     "react-hot-loader": "^1.3.0",
     "react-redux": "^5.0.5",
@@ -30,7 +36,9 @@
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.15.3",
-    "webpack": "^1.12.2",
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.13",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0"
   },
